--- a/Python/NStateRJPlot.ipynb
+++ b/Python/NStateRJPlot.ipynb
@@ -6,26 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\OutPut\\\\'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
+    "from matplotlib.ticker import MaxNLocator\n",
     "import os\n",
     "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
+    "\n",
     "def cm2inch(value):\n",
     "    return value/2.54\n",
+    "\n",
     "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
@@ -33,7 +27,8 @@
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "plt.rcParams['xtick.labelsize'] = 6\n",
     "plt.rcParams['ytick.labelsize'] = 6\n",
-    "plt.rcParams['legend.fontsize'] =6\n",
+    "plt.rcParams['legend.fontsize'] = 6\n",
+    "\n",
     "from matplotlib import rcParams\n",
     "config = {\n",
     "    \"text.usetex\": False,\n",
@@ -99,6 +94,7 @@
     "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
     "cbformat.set_powerlimits((-0,0))\n",
     "cbformat.format=\"%.2f\"\n",
+    "\n",
     "import matplotlib.ticker\n",
     "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
     "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
@@ -124,7 +120,8 @@
     "            return True\n",
     "    else:\n",
     "        print(d, \" is not exists! \")\n",
-    "        return  False   \n",
+    "        return  False \n",
+    "        \n",
     "import  imageio\n",
     "import os\n",
     "def compose_gif(image_list,gif_name,myduration):\n",
@@ -133,10 +130,37 @@
     "        frames.append(imageio.imread(image_name))\n",
     "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
     "    return\n",
+    "\n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\""
+    "figureType=\".jpeg\"\n",
+    "timeUnit=\"fs\"\n",
+    "def xyplot(int_dir,label_x,label_y,out_dir,*cmd):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        data=np.loadtxt(int_dir)\n",
+    "        # plt.xlim(TimeTurn,TimeEnd)\n",
+    "        ax=plt.plot(data[:,0],data[:,1],'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "        # plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "        plt.xlabel(label_x)\n",
+    "        plt.ylabel(label_y)\n",
+    "        if cmd:\n",
+    "            for i in cmd:\n",
+    "               eval(cmd[0])\n",
+    "        plt.savefig(out_dir+int_dir[-7:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "    else:\n",
+    "        print(\"No dataset found.\")\n",
+    "def xyzplot(int_dir,x_label,y_label,out_dir):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        dat=np.loadtxt(int_dir)\n",
+    "        plt.tricontourf(dat[:,0],dat[:,1],dat[:,2],levels,cmap='jet')\n",
+    "        plt.colorbar()\n",
+    "        plt.xlabel(x_label)\n",
+    "        plt.ylabel(y_label)\n",
+    "        plt.savefig(out_dir+int_dir[-9:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(\"The dataset does not exist. \")"
    ]
   },
   {
@@ -145,10 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'Efield.dat')\n",
-    "t=data[:,0]\n",
-    "e=data[:,1]\n",
-    "plt.plot(t,e)"
+    "dir=\"D:\\\\dataofpro\\\\output\\\\\""
    ]
   },
   {
@@ -157,10 +178,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'VGR_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
+    "fil=dir+\"efield_1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'Time (fs) ','Intensity (v/m) ',dir)\n"
    ]
   },
   {
@@ -169,10 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'VE_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
+    "fil=dir+\"efield_2.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'Time (fs) ','Intensity (v/m) ',dir)"
    ]
   },
   {
@@ -181,11 +200,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'VE_R_CM_1.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "fil=dir+\"efield_rwa.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'Time (fs) ','Intensity (v/m) ',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"efield.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'Time (fs) ','Intensity (v/m) ',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"qr1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$R$','Intensity (a.u.) ',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"orientation\\\\cos_even_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ (fs)','$\\\\langle \\\\mathrm{cos}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"orientation\\\\cos_odd_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ fs','$\\\\langle \\\\mathrm{cos}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"orientation\\\\cos_tot_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ fs','$\\\\langle \\\\mathrm{cos}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"alignment\\\\cos2_even_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ fs','$\\\\langle \\\\mathrm{cos^2}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"alignment\\\\cos2_odd_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ fs','$\\\\langle \\\\mathrm{cos^2}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+\"alignment\\\\cos2_tot_state1.dat\"\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,'$t$ fs','$\\\\langle \\\\mathrm{cos^2}\\\\theta \\\\rangle$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyzplot(dir+'population\\\\state1_s1_v00_j00_pm00angpop.dat',\n",
+    "        'Time (fs)','$\\\\theta$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyzplot(dir+'population\\\\state1_s1_v00_j00_pm00radpop.dat',\n",
+    "        'Time (fs)','$R$',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quickSort(arr, left=None, right=None):\n",
+    "    left = 0 if not isinstance(left,(int, float)) else left\n",
+    "    right = len(arr)-1 if not isinstance(right,(int, float)) else right\n",
+    "    if left < right:\n",
+    "        partitionIndex = partition(arr, left, right)\n",
+    "        quickSort(arr, left, partitionIndex-1)\n",
+    "        quickSort(arr, partitionIndex+1, right)\n",
+    "    return arr\n",
+    "\n",
+    "def partition(arr, left, right):\n",
+    "    pivot = left\n",
+    "    index = pivot+1\n",
+    "    i = index\n",
+    "    while  i <= right:\n",
+    "        if arr[i] < arr[pivot]:\n",
+    "            swap(arr, i, index)\n",
+    "            index+=1\n",
+    "        i+=1\n",
+    "    swap(arr,pivot,index-1)\n",
+    "    return index-1\n",
+    "\n",
+    "def swap(arr, i, j):\n",
+    "    arr[i], arr[j] = arr[j], arr[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileList=os.listdir(dir+\"time_wavepacket_distribution\\\\\")\n",
+    "plotList=list()\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"time_wavepacket_distribution\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        plotList.append(s)\n",
+    "n=len(plotList)\n",
+    "print(n)\n",
+    "for i in range(n):\n",
+    "    dat=np.loadtxt(plotList[i])    \n",
+    "    a=dat[:,0]/180*3.1415926\n",
+    "    p=dat[:,1]\n",
+    "    plt.polar(a,p)\n",
+    "    plt.xlabel('$\\\\theta$')\n",
+    "    # plt.ylabel(\"Population\")\n",
+    "    plt.ylim(min(p)-0.5,max(p)+0.5)\n",
+    "    plt.savefig(dir+\"time_wavepacket_distribution\\\\\"+str(i),dpi=600)\n",
+    "    plt.show()\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_INITIAL.dat')\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "x=dat[:,0]/180*np.pi\n",
+    "y=dat[:,1]\n",
     "plt.plot(x,y)\n",
-    "plt.xlim(0,100)"
+    "plt.ylim(0,1)"
    ]
   },
   {
@@ -194,99 +392,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'test.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'T_TEMP.dat')\n",
-    "x=data[:]\n",
-    "plt.bar(x,0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'pop_tot.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.plot(y[0:240],z[0:240])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[241:482],z[241:482])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[241*2:241*3],z[241*2:241*3])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[241*3:241*4],z[241*3:241*4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'Laser_shaped.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'J_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'EVNELOPE.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_final.dat')\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "x=dat[:,0]/180*np.pi\n",
+    "y=dat[:,1]\n",
     "plt.plot(x,y)\n",
-    "plt.xlim(0,100)"
+    "plt.ylim(0,1)"
    ]
   },
   {
@@ -295,12 +406,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'Condon_fac.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
+    "dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_3.550ps.dat')\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "x=dat[:,0]/180*np.pi\n",
+    "y=dat[:,1]\n",
     "plt.plot(x,y)\n",
-    "# "
+    "plt.ylim(0,1)"
    ]
   },
   {
@@ -309,7 +420,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(x,z)"
+    "subdir=dir+\"r_initial_wavefunction\\\\\"\n",
+    "fileList=os.listdir(subdir)\n",
+    "plotList=list()\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=subdir+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        plotList.append(s)\n",
+    "n=len(plotList)\n",
+    "print(n)\n",
+    "for i in range(n):\n",
+    "    dat=np.loadtxt(plotList[i])    \n",
+    "    a=dat[:,0]\n",
+    "    p=dat[:,1]\n",
+    "    plt.plot(a,p)\n",
+    "    dy=max(p)-min(p)\n",
+    "    dx=max(a)-min(a)\n",
+    "    plt.xlabel('$t$ (fs)')\n",
+    "    plt.ylabel(\"$\\\\langle \\\\mathrm{cos^2}\\\\theta\\\\rangle$\")\n",
+    "    plt.ylim(min(p)-0.1*dy,max(p)+0.1*dy)\n",
+    "    plt.\n",
+    "    plt.savefig(subdir+str(i),dpi=600)\n",
+    "    plt.show()\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat=np.loadtxt('D:\\\\dataofpro\\\\TimFreDis1.dat')\n",
+    "x=dat[:,0]\n",
+    "y=dat[:,1]\n",
+    "z=dat[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')"
    ]
   },
   {
