--- a/Python/Nakplot.ipynb
+++ b/Python/Nakplot.ipynb
@@ -6,26 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\OutPut\\\\'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
+    "from matplotlib.ticker import MaxNLocator\n",
     "import os\n",
     "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
+    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"sans-serif\",\n",
+    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# # for Palatino and other serif fonts use:\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     #\"font.serif\": [\"Palatino\"],\n",
+    "#     \"font.serif\": [\"Time New Roman\"], \n",
+    "# })\n",
+    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
+    "# plt.rcParams.update({\n",
+    "#   \"text.usetex\": True,\n",
+    "#   \"font.family\": \"Time New Roman\",\n",
+    "#   \"font.size\": 8,\n",
+    "# })\n",
+    "\n",
     "def cm2inch(value):\n",
     "    return value/2.54\n",
+    "\n",
     "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
@@ -33,7 +45,8 @@
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "plt.rcParams['xtick.labelsize'] = 6\n",
     "plt.rcParams['ytick.labelsize'] = 6\n",
-    "plt.rcParams['legend.fontsize'] =6\n",
+    "plt.rcParams['legend.fontsize'] = 6\n",
+    "\n",
     "from matplotlib import rcParams\n",
     "config = {\n",
     "    \"text.usetex\": False,\n",
@@ -44,6 +57,8 @@
     "    # \"font.serif\": ['SimSun'],\n",
     "}\n",
     "rcParams.update(config)\n",
+    "\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy \n",
     "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
@@ -51,6 +66,12 @@
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
     "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
     "                             loc=[-0.2,1.0005],\n",
     "                             handlelength=0.0,\n",
@@ -99,6 +120,7 @@
     "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
     "cbformat.set_powerlimits((-0,0))\n",
     "cbformat.format=\"%.2f\"\n",
+    "\n",
     "import matplotlib.ticker\n",
     "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
     "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
@@ -124,7 +146,8 @@
     "            return True\n",
     "    else:\n",
     "        print(d, \" is not exists! \")\n",
-    "        return  False   \n",
+    "        return  False \n",
+    "        \n",
     "import  imageio\n",
     "import os\n",
     "def compose_gif(image_list,gif_name,myduration):\n",
@@ -133,10 +156,34 @@
     "        frames.append(imageio.imread(image_name))\n",
     "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
     "    return\n",
+    "\n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\""
+    "timeUnit=\"fs\"\n",
+    "def xyplot(int_dir,label_x,label_y,out_dir):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        data=np.loadtxt(int_dir)\n",
+    "        # plt.xlim(TimeTurn,TimeEnd)\n",
+    "        ax=plt.plot(data[:,0],data[:,1],'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "        # plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "        plt.xlabel(label_x)\n",
+    "        plt.ylabel(label_y)\n",
+    "        plt.savefig(out_dir+int_dir[-7:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "    else:\n",
+    "        print(\"No dataset found.\")\n",
+    "def xyzplot(int_dir,x_label,y_label,out_dir):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        dat=np.loadtxt(int_dir)\n",
+    "        plt.tricontourf(dat[:,0],dat[:,1],dat[:,2],levels,cmap='jet')\n",
+    "        plt.colorbar()\n",
+    "        plt.xlabel(x_label)\n",
+    "        plt.ylabel(y_label)\n",
+    "        plt.savefig(outdir+int_dir[-7:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(\"The dataset does not exist. \")"
    ]
   },
   {
@@ -145,10 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'Efield.dat')\n",
-    "t=data[:,0]\n",
-    "e=data[:,1]\n",
-    "plt.plot(t,e)"
+    "dir='D:\\\\dataofpro\\\\Nak程序\\\\'"
    ]
   },
   {
@@ -157,71 +201,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'VGR_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'VE_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'VE_R_CM_1.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
-    "plt.xlim(0,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'test.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'T_TEMP.dat')\n",
-    "x=data[:]\n",
-    "plt.bar(x,0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'pop_tot.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.plot(y[0:240],z[0:240])\n",
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "#timeP=\"20\"\n",
+    "fileList1 =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
+    "filelist1=list()\n",
+    "s1=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList1)\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=dir+\"p_vgr_vj\\\\\"+str(fileList1[i])\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            s1.append(s)\n",
+    "\n",
+    "    for ii in range(n):\n",
+    "        ax=plt.gca()\n",
+    "        DataPop =np.loadtxt(s1[ii])\n",
+    "        #plt.style.use('_mpl-gallery-nogrid')\n",
+    "        x=DataPop[:,0]\n",
+    "        y=DataPop[:,1]\n",
+    "        z=DataPop[:,2]\n",
+    "        ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "        nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "        zMesh=np.zeros((ny,nx))\n",
+    "        for i in range(1,nx):\n",
+    "            for j in range(1,ny):\n",
+    "                zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "        xMesh=np.linspace(min(x),max(x),nx)\n",
+    "        yMesh=np.linspace(min(y),max(y),ny)\n",
+    "        #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "        plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "        ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "        ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "        plt.xlim(-0.5,19.5)\n",
+    "        plt.ylim(-0.5,19.5)\n",
+    "        plt.xlabel('$V$')\n",
+    "        plt.ylabel('$J$')\n",
+    "        plt.title(\"Ground state, $t$ = \"+s1[ii][-13:-8]+\" fs\",loc='left')\n",
+    "        plt.colorbar(format=cbformat)\n",
+    "        plt.subplots_adjust(left=0.125,\n",
+    "                            bottom=0.1, \n",
+    "                            right=0.9, \n",
+    "                            top=0.9, \n",
+    "                            wspace=0.25, \n",
+    "                            hspace=0.2)\n",
+    "        plt.savefig(dir+\"p_vgr_vj\\\\\"+s1[ii][-16:-8]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "        plt.close()\n",
     "\n"
    ]
   },
@@ -231,85 +257,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(y[241:482],z[241:482])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[241*2:241*3],z[241*2:241*3])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[241*3:241*4],z[241*3:241*4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'Laser_shaped.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'J_X.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'EVNELOPE.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
-    "plt.xlim(0,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+'Condon_fac.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.plot(x,y)\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(x,z)"
+    "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
+    "# print(fileList)\n",
+    "image_list=list()\n",
+    "# print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"p_vgr_vj\\\\\"+str(fileList[i])\n",
+    "    if s[-6:]==\"0.jpeg\":\n",
+    "        image_list.append(s)\n",
+    "n=len(image_list)\n",
+    "print(n)\n",
+    "if n:   \n",
+    "    gif_name = \"P_VJ.gif\"# print(image_list)\n",
+    "    myduration=0.3#eval(input(\"duration: s\"))\n",
+    "    compose_gif(image_list,dir+gif_name,myduration)\n",
+    "    print(\"Created\")    "
    ]
   },
   {
