--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\fc\\\\fc9\\\\'"
+    "dir='D:\\\\dataofpro\\\\'"
    ]
   },
   {
@@ -215,6 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TimeBegin=0.0\n",
+    "TimeEnd=30\n",
+    "dt=0.1\n",
     "file=dir+'Laserfield.dat'\n",
     "if fee(file): \n",
     "    TimeBegin =(min(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
@@ -253,7 +256,7 @@
     "intdir=dir\n",
     "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "file=intdir+\"TimFreDis1.dat\"\n",
-    "if (file):\n",
+    "if fee(file):\n",
     "    ax=plt.axes([0.05,0.55,0.40,0.40])\n",
     "    setlabel(ax,'(a)')\n",
     "    plt.title('')\n",
@@ -387,14 +390,15 @@
     "    data = np.loadtxt(dir+\"PopulationOfState.dat\")\n",
     "else:\n",
     "    print(\"No PopulationOfState dataset found.\")\n",
-    "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
-    "ax=plt.subplot(1,2,1)\n",
-    "setlabel(ax,\"(a)\")\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
-    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r--',data[:,0],1-data[:,1]-data[:,2],'b-.')\n",
-    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"Population\")\n",
+    "if fee(dir+\"popu.dat\"):\n",
+    "    plt.figure(figsize=(16/2.54,6.5/2.54))\n",
+    "    ax=plt.subplot(1,2,1)\n",
+    "    setlabel(ax,\"(a)\")\n",
+    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r--',data[:,0],1-data[:,1]-data[:,2],'b-.')\n",
+    "    plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.70))\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"Population\")\n",
     "if fee(dir+\"timeenergyspctra.dat\"):\n",
     "    ax=plt.subplot(1,2,2)\n",
     "    setlabel(ax,\"(b)\")\n",
@@ -488,38 +492,41 @@
     "\n",
     "if os.path.exists(dir+\"pott.dat\"):\n",
     "    data=np.loadtxt(dir+\"Pott.dat\")\n",
-    "else:\n",
+    "elif fee(dir+\"potential.dat\"):\n",
     "    data=np.loadtxt(dir+\"PotentialEnergy.dat\")\n",
-    "\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "#plt.grid(False)\n",
-    "x=x\n",
-    "y=y3\n",
-    "setlabelm(ax,'(a)',[-0.2,1.001])\n",
-    "plt.xlabel('$R$ (a.u.)')\n",
-    "plt.ylabel(\"Energy (a.u.)\")\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.xlim(1.75,11)\n",
-    "plt.fill_between(x,y3,x,y3+0.2)\n",
-    "plt.ylim(-0.05,0.5)\n",
-    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.6,0.65))\n",
+    "else:\n",
+    "    print(\"No potential data found\")\n",
+    "if fee(dir+\"PotentialEnergy.dat\")&fee(dir+\"Pott.dat\"):\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    #plt.grid(False)\n",
+    "    x=x\n",
+    "    y=y3\n",
+    "    setlabelm(ax,'(a)',[-0.2,1.001])\n",
+    "    plt.xlabel('$R$ (a.u.)')\n",
+    "    plt.ylabel(\"Energy (a.u.)\")\n",
+    "    plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
+    "    plt.xlim(1.75,11)\n",
+    "    plt.fill_between(x,y3,x,y3+0.2)\n",
+    "    plt.ylim(-0.05,0.5)\n",
+    "    plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.6,0.65))\n",
     "ax=plt.subplot(1,2,2)\n",
     "if os.path.exists(dir+\"Dipole.dat\"):\n",
     "    data=np.loadtxt(dir+\"Dipole.dat\")\n",
-    "else:\n",
+    "elif fee(dir+\"DipoleMoment.dat\"):\n",
     "    data=np.loadtxt(dir+\"DipoleMoment.dat\")\n",
-    "setlabelm(ax,'(b)',[-0.2,1.001])\n",
-    "plt.xlabel(\"$R$  (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (D)\")\n",
-    "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
-    "plt.xlim(1.75,11)\n",
-    "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.65,0.05))\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()\n",
+    "if fee(dir+\"Dipole.dat\")&fee(dir+\"DipoleMoment.dat\"): \n",
+    "    setlabelm(ax,'(b)',[-0.2,1.001])\n",
+    "    plt.xlabel(\"$R$  (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (D)\")\n",
+    "    plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
+    "    plt.xlim(1.75,11)\n",
+    "    plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.65,0.05))\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.show()\n",
     "# os.startfile(dir+\"PotentialEnergyAndDipoleMent.\"+figureType)\n"
    ]
   },
@@ -2241,6 +2248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
     "# print(fileList)\n",
     "image_list=list()\n",
