--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "dir='D:\\\\doc\\\\data\\\\twoPump\\\\'\n",
     "outDir='D:\\\\doc\\\\data\\\\twoPump\\\\'\n",
-    "outDir='D:\\\\doc\\\\latex\\\\TwoPump\\\\FIG\\\\'"
+    "# outDir='D:\\\\doc\\\\latex\\\\TwoPump\\\\FIG\\\\'"
    ]
   },
   {
@@ -184,7 +184,7 @@
     "plt.xlim(1.75,11)\n",
     "plt.legend([\"$\\\\mu_{_{XX}} $\",\"$\\\\mu_{_{AA}} $\",\"$\\\\mu_{_{XA}} $\"],loc=(0.60,0.05))\n",
     "plt.tight_layout()\n",
-    "plt.savefig(outDir+\"Fig1.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.savefig(outDir+\"Fig1.\"+figureType,transparent=True,dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "intdir='D:\\\\doc\\\\data\\\\onepump\\\\onepump5\\\\'\n",
-    "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
+    "plt.figure(figsize=(cm2inch(16),cm2inch(6.5*2)))\n",
     "ax=plt.axes([0.05,0.55,0.40,0.40])\n",
     "setlabel(ax,'(a)')\n",
     "plt.title('')\n",
@@ -289,84 +289,181 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2060100\\\\\"\n",
-    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\63\\\\'\n",
-    "legengLoc=(0.15,0.75)\n",
-    "plt.figure(figsize=((16/2.54),(13/2)))\n",
-    "#plt.figure(figsize=(8,6))\n",
-    "titleLoc=\"left\"\n",
-    "ax1=plt.subplot(2,2,1)\n",
-    "setlabel(ax1,'(a)')\n",
-    "data=np.loadtxt(intDir+\"TimFreDis4.dat\")\n",
-    "np.savetxt(outDir+\"data\\\\f3(1).dat\",data,fmt=\"%.9f\")\n",
+    "# intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2060100\\\\\"\n",
+    "# intDir='D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\63\\\\'\n",
+    "# legengLoc=(0.15,0.75)\n",
+    "# plt.figure(figsize=((16/2.54),(13/2)))\n",
+    "# #plt.figure(figsize=(8,6))\n",
+    "# titleLoc=\"left\"\n",
+    "# ax1=plt.subplot(2,2,1)\n",
+    "# setlabel(ax1,'(a)')\n",
+    "# data=np.loadtxt(intDir+\"TimFreDis4.dat\")\n",
+    "# np.savetxt(outDir+\"data\\\\f3(1).dat\",data,fmt=\"%.9f\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"Frequency (a.u.)\")\n",
+    "# plt.tricontourf(x,y,z,100,cmap='jet')\n",
+    "# #plt.colorbar()\n",
+    "# ax2=plt.subplot(2,2,2)\n",
+    "# setlabel(ax2,'(b)')\n",
+    "# data1=np.loadtxt(intDir+\"FreDis1.dat\")\n",
+    "# data2=np.loadtxt(intDir+\"FreDis2.dat\")\n",
+    "# data3=np.loadtxt(intDir+\"FreDis3.dat\")\n",
+    "# data4=np.loadtxt(intDir+\"FreDis4.dat\")\n",
+    "# np.savetxt(outDir+\"data\\\\f3(2).dat\",data4,fmt=\"%.9f\")\n",
+    "# x1=data1[:,0]\n",
+    "# y1=data1[:,1]\n",
+    "# x2=data2[:,0]\n",
+    "# y2=data2[:,1]\n",
+    "# x3=data3[:,0]\n",
+    "# y3=data3[:,1]\n",
+    "# x4=data4[:,0]\n",
+    "# y4=data4[:,1]\n",
+    "# plt.xlabel(\"Intensity (arb.units)\") \n",
+    "# plt.ylabel(\"Frequency (a.u.)\")\n",
+    "# #plt.xlim(0,5)\n",
+    "# plt.ylim(min(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]))\n",
+    "# # plt.plot(y4,x4)\n",
+    "# plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
+    "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.1))\n",
+    "# # plt.legend([\"pump\",\"probe\"],loc=(0.6,0.1))\n",
+    "# #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "# ax3=plt.subplot(2,2,3)\n",
+    "# data=np.loadtxt(intDir+\"Laser.dat\")\n",
+    "# # np.savetxt(dir+\"data\\\\f3(34).dat\",data,fmt=\"%.9f\")\n",
+    "# x=data[:,0]\n",
+    "# y1=data[:,4]\n",
+    "# y2=data[:,5]\n",
+    "# y3=data[:,6]\n",
+    "# plt.xlim(min(x),max(x))\n",
+    "# setlabel(ax3,'(c)')\n",
+    "# plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"Intensity (a.u.)\")\n",
+    "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
+    "# # plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
+    "# #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "# ax4=plt.subplot(2,2,4)\n",
+    "# setlabel(ax4,'(d)')\n",
+    "# data=np.loadtxt(intDir+\"Laser.dat\")\n",
+    "# x1=data[:,0]\n",
+    "# y1=data[:,1]\n",
+    "# y2=data[:,2]\n",
+    "# y3=data[:,3]\n",
+    "# plt.xlim(min(x),max(x))\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"Intensity (a.u.)\")\n",
+    "\n",
+    "# plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
+    "# plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
+    "# # plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "# #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "# plt.subplots_adjust(left=0.125,\n",
+    "#                     bottom=0.1, \n",
+    "#                     right=0.9, \n",
+    "#                     top=0.9, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.22)\n",
+    "# plt.savefig(outDir+\"Fig3.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intdir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\twopumpdelayeq42\\\\'\n",
+    "plt.figure(figsize=(cm2inch(16),cm2inch(6.5*2)))\n",
+    "ax=plt.axes([0.05,0.55,0.40,0.40])\n",
+    "setlabel(ax,'(a)')\n",
+    "plt.title('')\n",
+    "data=np.loadtxt(intdir+\"TimFreDis4.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet',vmin=0.0,vmax=2.1)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "plt.tricontourf(x,y,z,100,cmap='jet')\n",
-    "#plt.colorbar()\n",
-    "ax2=plt.subplot(2,2,2)\n",
-    "setlabel(ax2,'(b)')\n",
-    "data1=np.loadtxt(intDir+\"FreDis1.dat\")\n",
-    "data2=np.loadtxt(intDir+\"FreDis2.dat\")\n",
-    "data3=np.loadtxt(intDir+\"FreDis3.dat\")\n",
-    "data4=np.loadtxt(intDir+\"FreDis4.dat\")\n",
-    "np.savetxt(outDir+\"data\\\\f3(2).dat\",data4,fmt=\"%.9f\")\n",
-    "x1=data1[:,0]\n",
-    "y1=data1[:,1]\n",
-    "x2=data2[:,0]\n",
-    "y2=data2[:,1]\n",
-    "x3=data3[:,0]\n",
-    "y3=data3[:,1]\n",
-    "x4=data4[:,0]\n",
-    "y4=data4[:,1]\n",
-    "plt.xlabel(\"Intensity (arb.units)\") \n",
-    "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "#plt.xlim(0,5)\n",
-    "plt.ylim(min(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]))\n",
-    "# plt.plot(y4,x4)\n",
-    "plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
-    "plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.1))\n",
-    "# plt.legend([\"pump\",\"probe\"],loc=(0.6,0.1))\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "ax3=plt.subplot(2,2,3)\n",
-    "data=np.loadtxt(intDir+\"Laser.dat\")\n",
-    "# np.savetxt(dir+\"data\\\\f3(34).dat\",data,fmt=\"%.9f\")\n",
+    "plt.xlim(0,150)\n",
+    "sciforyax(ax)\n",
+    "ax=plt.axes([0.55,0.80,0.40,0.15])\n",
+    "setlabel(ax,'(b)')\n",
+    "data=np.loadtxt(intdir+\"p_vgr_vj\\\\p_vj_at_pos000100_fs.dat\")\n",
     "x=data[:,0]\n",
-    "y1=data[:,4]\n",
-    "y2=data[:,5]\n",
-    "y3=data[:,6]\n",
-    "plt.xlim(min(x),max(x))\n",
-    "setlabel(ax3,'(c)')\n",
-    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
-    "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "ax4=plt.subplot(2,2,4)\n",
-    "setlabel(ax4,'(d)')\n",
-    "data=np.loadtxt(intDir+\"Laser.dat\")\n",
-    "x1=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-0.5,17.5)\n",
+    "plt.ylim(-0.5,10.5)\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.title(\"Ground state  $t$ = 100 fs\",fontsize=8)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "\n",
+    "ax=plt.axes([0.55,0.55,0.40,0.15])\n",
+    "\n",
+    "data=np.loadtxt(intdir+\"p_exc_vj\\\\p_vj_at_pos000100_fs.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-0.5,17.5)\n",
+    "plt.ylim(-0.5,10.5)\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.title(\"Excited state $t$ = 100 fs\",fontsize=8)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "ax=plt.axes([0.05,0.05,0.40,0.40])\n",
+    "setlabel(ax,'(c)')\n",
+    "data= np.loadtxt(intdir+\"ionradWave.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.ylim(1.75,10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlim(0,150)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "ax=plt.axes([0.55,0.05,0.35,0.40])\n",
+    "setlabel(ax,'(d)')\n",
+    "data= np.loadtxt(intdir+\"PopulationOfState.dat\")\n",
+    "t=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
-    "plt.xlim(min(x),max(x))\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "\n",
-    "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
-    "plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
-    "# plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.22)\n",
-    "plt.savefig(outDir+\"Fig3.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.plot(t,y1,'k-',t,y2,'r--',t,1-y1-y2,'b-.')\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "plt.savefig(outDir+\"Fig3.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
