--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\'"
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\PMD\\\\t3\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\wingener1\\\\'"
    ]
   },
   {
@@ -255,7 +257,7 @@
    "source": [
     "intdir=dir\n",
     "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
-    "file=intdir+\"TimFreDis1.dat\"\n",
+    "file=intdir+\"TimFreDis4.dat\"\n",
     "if fee(file):\n",
     "    ax=plt.axes([0.05,0.55,0.40,0.40])\n",
     "    setlabel(ax,'(a)')\n",
@@ -932,7 +934,7 @@
     "    # plt.xlim(0,150)\n",
     "    plt.ylim(min(y),10)\n",
     "    #FC \n",
-    "\n",
+    "if fee(dir+\"FcRad.dat\"):\n",
     "    ax=plt.axes([0.55,0.55,0.35,0.17])\n",
     "    data=np.loadtxt(intDir+\"FcRad.dat\")\n",
     "    x=data[:,0]\n",
@@ -2156,8 +2158,8 @@
     "fileList1 =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
     "fileList2 =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
     "\n",
-    "filelist1=list()\n",
-    "filelist2=list()\n",
+    "# filelist1=list()\n",
+    "# filelist2=list()\n",
     "s1=list()\n",
     "s2=list()\n",
     "print(\"Checking image list\")\n",
@@ -2437,6 +2439,91 @@
     "    compose_gif(image_list,dir+gif_name,myduration)\n",
     "    print(\"Created\")   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from  scipy.interpolate import interpn\n",
+    "fileList =os.listdir(dir+\"PMD\\\\\")\n",
+    "print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PMD\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "             \n",
+    "# print(dat_list)\n",
+    "for i in range(n-1):\n",
+    "    if fee(dat_list[i]):\n",
+    "        data=np.loadtxt(dat_list[i])\n",
+    "        x=data[:,0]\n",
+    "        y=data[:,1]\n",
+    "        z=data[:,2]\n",
+    "        points=(x,y,z)\n",
+    "        \n",
+    "        ax=plt.figure().add_subplot(projection='polar')\n",
+    "        #fig=plt.subplots(2,2)\n",
+    "        #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "        ax.scatter(y,x,s=z)\n",
+    "        plt.title('$t$ = '+dat_list[i][-10:-6]+' fs',loc='left')\n",
+    "        plt.ylabel(\"$\\\\mathrm{cos}\\\\,\\\\theta$\")\n",
+    "        plt.xlabel(\"$P$ (a.u.)\")\n",
+    "        # plt.colorbar(format=cbformat)\n",
+    "        plt.savefig(dir+\"PMD\\\\\"+dat_list[i][-10:-6]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "        plt.show()\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileList =os.listdir(dir+\"PMD\\\\\")\n",
+    "print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PMD\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "             \n",
+    "# print(dat_list)\n",
+    "for i in range(n-1):\n",
+    "    if fee(dat_list[i]):\n",
+    "        data=np.loadtxt(dat_list[i])\n",
+    "        x=data[:,0]\n",
+    "        y=data[:,1]\n",
+    "        z=data[:,2]\n",
+    "        points=(x,y,z)\n",
+    "        \n",
+    "        # ax=plt.figure().add_subplot(projection='polar')\n",
+    "        #fig=plt.subplots(2,2)\n",
+    "        #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "        # ax.scatter(y,x,s=z)\n",
+    "        plt.tricontourf(y,x,z)\n",
+    "        plt.title('$t$ = '+dat_list[i][-10:-6]+' fs',loc='left')\n",
+    "        plt.xlabel(\"$\\\\mathrm{cos}\\\\,\\\\theta$\")\n",
+    "        plt.ylabel(\"$P$ (a.u.)\")\n",
+    "        # plt.colorbar(format=cbformat)\n",
+    "        plt.savefig(dir+\"PMD\\\\\"+dat_list[i][-10:-6]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "        plt.show()\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2455,7 +2542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
