--- a/Python/PAPlot.ipynb
+++ b/Python/PAPlot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\OutPut\\\\'"
+    "dir='D:\\\\dataofpro\\\\OutPut1\\\\'"
    ]
   },
   {
@@ -310,6 +310,65 @@
    "outputs": [],
    "source": [
     "plt.plot(x,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fildir=dir+'PP\\\\'\n",
+    "datlist=os.listdir(fildir)\n",
+    "n=len(datlist)\n",
+    "print(datlist)\n",
+    "lis=list()\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=fildir+str(datlist[i])\n",
+    "        print(s)\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            lis.append(s)\n",
+    "    n=len(lis)\n",
+    "    for i in range(n):\n",
+    "        dat=np.loadtxt(lis[i])\n",
+    "        x=dat[:,0]\n",
+    "        y=dat[:,1]\n",
+    "        plt.plot(x,y)\n",
+    "        plt.show()\n",
+    "        plt.close()\n",
+    "        \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fildir=dir+'Tran_WP\\\\'\n",
+    "datlist=os.listdir(fildir)\n",
+    "n=len(datlist)\n",
+    "print(datlist)\n",
+    "lis=list()\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=fildir+str(datlist[i])\n",
+    "        print(s)\n",
+    "        if s[-4:]==\".DAT\":\n",
+    "            lis.append(s)\n",
+    "    n=len(lis)\n",
+    "    print(n)\n",
+    "    for i in range(n):\n",
+    "        dat=np.loadtxt(lis[i])\n",
+    "        x=dat[:,0]\n",
+    "        y=dat[:,1]\n",
+    "        z=dat[:,3]\n",
+    "        plt.plot(x,z)\n",
+    "        plt.show()\n",
+    "        plt.close()"
    ]
   },
   {
